@@ -434,6 +434,9 @@ public class MiscIRODSUtils {
 		} else if (objStat.getSpecColType() == SpecColType.NORMAL) {
 			// OK
 		} else if (objStat.getSpecColType() == SpecColType.STRUCT_FILE_COLL) {
+			// OK
+		} else if (objStat.getSpecColType() == SpecColType.MOUNTED_COLL) {
+			// OK
 		} else {
 			throw new JargonException(
 					"unsupported object type, support not yet available for:"
