@@ -26,6 +26,7 @@ import org.irods.jargon.core.pub.IRODSGenQueryExecutorImplTest;
 import org.irods.jargon.core.pub.IRODSRegistrationOfFilesAOImplTest;
 import org.irods.jargon.core.pub.MountedCollectionAOImplForMSSOTest;
 import org.irods.jargon.core.pub.MountedCollectionAOImplTest;
+import org.irods.jargon.core.pub.MountedFilesystemCollectionAndDataObjectListAndSearchAOImplTest;
 import org.irods.jargon.core.pub.ProtocolExtensionPointImplTest;
 import org.irods.jargon.core.pub.QuotaAOImplTest;
 import org.irods.jargon.core.pub.RemoteExecutionOfCommandsAOImplTest;
@@ -71,7 +72,8 @@ import org.junit.runners.Suite;
 		IRODSGenQueryExecutorImplBuiilderQueriesTest.class,
 		CollectionAndDataObjectListAndSearchAOImplForSoftLinksTest.class,
 		SpecificQueryAOTest.class, MountedCollectionAOImplForMSSOTest.class,
-		FederatedSpecificQueryAOTest.class })
+		FederatedSpecificQueryAOTest.class,
+		MountedFilesystemCollectionAndDataObjectListAndSearchAOImplTest.class })
 /**
  * Suite to run Access Object tests in org.irods.jargon.pub.*
  * <p/>
