@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.irods</groupId>
 		<artifactId>jargon</artifactId>
-		<version>b1182-workflow</version>
+		<version>3.3.3-workflow-SNAPSHOT</version>
 	</parent>
 	<groupId>org.irods.jargon</groupId>
 	<artifactId>jargon-ticket</artifactId>
