@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.irods.jargon</groupId>
 		<artifactId>transfer</artifactId>
-		<version>b1182-workflow</version>
+		<version>3.3.3-workflow-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.irods.jargon.transfer</groupId>
