@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.irods.jargon</groupId>
     <artifactId>transfer</artifactId>
-    <version>b1182-workflow</version>
+    <version>3.3.3-workflow-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.irods.jargon.transfer</groupId>
@@ -21,7 +21,7 @@
       <dependency>
       <groupId>org.irods.jargon.transfer</groupId>
       <artifactId>jargon-transfer-dao-spring</artifactId>
-      <version>b1182-workflow</version>
+      <version>3.3.3-workflow-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javassist</groupId>
