@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>jargon</artifactId>
 		<groupId>org.irods</groupId>
-		<version>b1182-workflow</version>
+		<version>3.3.3-workflow-SNAPSHOT</version>
 	</parent>
 	<groupId>org.irods.jargon</groupId>
 	<artifactId>jargon-workflow</artifactId>
