@@ -4,7 +4,7 @@
 	<groupId>org.irods</groupId>
 	<artifactId>jargon</artifactId>
 	<packaging>pom</packaging>
-	<version>b1182-workflow</version>
+	<version>3.3.3-workflow-SNAPSHOT</version>
 	<name>Jargon</name>
 	<description>Core Java API and related libraries for iRODS</description>
 	<url>https://code.renci.org/gf/project/jargon</url>
