@@ -37,6 +37,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 
 ==Features==
 
+*[#605] add mso object support
+**CollectionAndDataObjectListAndSearchAO now supports mounted collection types
+
 *[#1182] add support for workflows
 
  
